--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><img src="logo.jpg">&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Dream To Be Fit</a></h1>
+        <h1><img src="./logo.png" class="img-fluid">&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Dream To Be Fit</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
