--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h3><a href="assets/img/portfolio/Portfolio-1" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1">Fitness 1</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
-                  <a href="https://time.com/4474874/exercise-fitness-workouts/" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -132,7 +132,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3">Diet 1</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.medicalnewstoday.com/articles/153998" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -145,7 +145,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2">Fitness 2</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.helpguide.org/articles/healthy-living/the-mental-health-benefits-of-exercise.htm" target=_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target=_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -158,7 +158,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2">Calories 1</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.medicalnewstoday.com/articles/263028" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2">Diet 2</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.medicalnewstoday.com/articles/322268" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -184,7 +184,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3">Fitness 3</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.everydayhealth.com/fitness/all-articles/" target=_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target=_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -197,7 +197,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1">Calories 2</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.statpearls.com/ArticleLibrary/viewarticle/18786" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -210,7 +210,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3">Calories 3</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
-                  <a href="https://my.clevelandclinic.org/health/articles/4182-fat-and-calories" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -223,7 +223,7 @@
                 <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1">Diet 3</a></h3>
                 <div>
                   <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bi bi-plus"></i></a>
-                  <a href="https://www.everydayhealth.com/diet-nutrition/all-articles/" target="_blank" title="Details"><i class="bi bi-link"></i></a>
+                  <a href="#" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -358,7 +358,7 @@ If you are overweight, losing even a small amount of weight can improve your qua
           <div class="col-lg-4 col-md-6">
             <div class="member">
               <img src="assets/img/team/team-3.jpg" alt="">
-              <h4>William Anderson</h4>
+              <h4>William Anders</h4>
               <span>CTO</span>
               <p>
                 Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
@@ -450,10 +450,10 @@ If you are overweight, losing even a small amount of weight can improve your qua
     </section><!-- End Contact Us Section -->
 
     <!-- ======= Map Section ======= -->
-    <section class="map">
+<!--     <section class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.2219901290355!2d-74.00369368400567!3d40.71312937933185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a23e28c1191%3A0x49f75d3281df052a!2s150%20Park%20Row%2C%20New%20York%2C%20NY%2010007%2C%20USA!5e0!3m2!1sen!2sbg!4v1579767901424!5m2!1sen!2sbg" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </section><!-- End Map Section -->
-
+ -->
   </main><!-- End #main -->
   <!-- ======= Footer ======= -->
   <footer id="footer">
