--- a/index.html
+++ b/index.html
@@ -54,21 +54,18 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><img src="logo.png" class="img-fluid">&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Dream To Be Fit</a></h1>
+        <img src="logo.png" class="img-fluid">&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Dream To Be Fit</a>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="Aboutus.html">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-         <li><a class="nav-link scrollto" href="#login">Login</a></li>
-          <li><a class="nav-link scrollto" href="#Register">Register</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
+          <li><a class="nav-link  active" href="#hero">Home</a></li>
+          <li><a class="nav-link " href="Aboutus.html">About Us</a></li>
+          <li><a class="nav-link " href="#services">Services</a></li>
+         <li><a class="nav-link " href="#login">Login</a></li>
+          <li><a class="nav-link " href="#Register">Register</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
