--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <img src="logo.png" class="img-fluid">&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Dream To Be Fit</a>
+        <img src="logo.png" class="img-fluid">&nbsp;&nbsp;&nbsp;&nbsp;<h1><a href="index.html">Dream To Be Fit</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link  active" href="#hero">Home</a></li>
+          <li><a class="nav-link  active" href="#">Home</a></li>
           <li><a class="nav-link " href="Aboutus.html">About Us</a></li>
-          <li><a class="nav-link " href="#services">Services</a></li>
-         <li><a class="nav-link " href="#login">Login</a></li>
-          <li><a class="nav-link " href="#Register">Register</a></li>
+          <li><a class="nav-link " href="#">Services</a></li>
+         <li><a class="nav-link " href="#">Login</a></li>
+          <li><a class="nav-link " href="#">Register</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
