--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <img src="logo.jpeg" class="img-fluid">&nbsp;&nbsp;&nbsp;&nbsp;<h1><a href="index.html">Dream To Be Fit</a></h1>
+        <a href="index.html">
+	 <img src="logo.jpeg" class="img-fluid"></a>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
