--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="all">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
   <title>FitnessFlyers - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -31,6 +33,9 @@
   body {
     background-color: #ddd;
 }
+	.logo .logop{
+	    font-family: 'Dancing Script', cursive;
+	}
 
 .carousel-item.active,
 .carousel-item-next,
@@ -47,7 +52,7 @@
 
       <div class="logo me-auto">
         <a href="index.html">
-	 <img src="logo.jpeg" class="img-fluid"></a>
+		<p clas="h1 logop">FitnessFlyers</p>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
