--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="logo me-auto">
         <a href="index.html">
-		<p clas="h1 logop">FitnessFlyers</p>
+		<h1 clas="h1 logop">FitnessFlyers</h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
