--- a/index.html
+++ b/index.html
@@ -30,19 +30,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <!--- SLider CSS starts here -->
-  body {
-    background-color: #ddd;
-}
-	.logo .logop{
-	    font-family: 'Dancing Script', cursive;
-	}
-
-.carousel-item.active,
-.carousel-item-next,
-.carousel-item-prev{
-    display:block;
-}  
-</head>
 
 <body>
 
@@ -52,9 +39,9 @@
 
       <div class="logo me-auto">
         <a href="index.html">
-		<h1 clas="h1 logop">FitnessFlyers</h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+		<
+       
+       <a href="index.html"><img src="logo.png" alt="Fitness" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
