--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="index.html">
 		<
        
-       <a href="index.html"><img src="logo.png" alt="Fitness" class="img-fluid"></a>
+       <a href="index.html"><img src="FitnessFlyers-Logo.png" alt="Fitness" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
