--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
       <div class="logo me-auto">
         <a href="index.html">
-		<
-       
-       <a href="index.html"><img src="FitnessFlyers-Logo.png" alt="Fitness" class="img-fluid"></a>
+         <p class="text-white h1" style="font-family:'Dancing Script', cursive;">FitnessFlyers</p>
+		<!--<img src="FitnessFlyers-Logo.png" alt="Fitness" class="img-fluid"></a> -->
       </div>
 
       <nav id="navbar" class="navbar">
