--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       </div>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link" href="#">Home</a></li>
+        <ul><li><a class="nav-link scrollto " href="index.html" >Home</a></li>
           <li><a class="nav-link " href="Aboutus.html">About Us</a></li>
           <li><a class="nav-link " href="#">Services</a></li>
          <li><a class="nav-link " href="#">Login</a></li>
