--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link " href="#">Home</a></li>
+          <li><a class="nav-link my-2" href="#">Home</a></li>
           <li><a class="nav-link " href="Aboutus.html">About Us</a></li>
           <li><a class="nav-link " href="#">Services</a></li>
          <li><a class="nav-link " href="#">Login</a></li>
