--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <div class="logo me-auto">
         <a href="index.html">
-         <p class="text-white h1" style="font-family:'Dancing Script', cursive;">FitnessFlyers</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!--          <p class="text-white h1" style="font-family:'Dancing Script', cursive;">FitnessFlyers</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--<img src="FitnessFlyers-Logo.png" alt="Fitness" class="img-fluid"></a> -->
       </div>
 
