--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <a href="index.html">
-<!--          <p class="text-white h1" style="font-family:'Dancing Script', cursive;">FitnessFlyers</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--<img src="FitnessFlyers-Logo.png" alt="Fitness" class="img-fluid"></a> -->
+         <a href="index.html">
+          <p class="text-white h1" style="font-family:'Dancing Script', cursive;">FitnessFlyers</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<!--<img src="FitnessFlyers-Logo.png" alt="Fitness" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
