--- a/login.html
+++ b/login.html
@@ -249,7 +249,18 @@ body {
       </div>
     </div>
   </footer>
-</body>
+		<script>
+const targetDiv = document.getElementById("third");
+const btn = document.getElementById("toggle");
+btn.onclick = function () {
+  if (targetDiv.style.display !== "none") {
+    targetDiv.style.display = "none";
+  } else {
+    targetDiv.style.display = "block";
+  }
+};
+document.getElementById('toggle').focus();
+		</script>
 
 	<script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/popper.js"></script>
