--- a/register.html
+++ b/register.html
@@ -333,6 +333,18 @@ function verifyPassword() {
   </div>
 </footer>
     </div><!-- /.container -->
+	<script>
+const targetDiv = document.getElementById("third");
+const btn = document.getElementById("toggle");
+btn.onclick = function () {
+  if (targetDiv.style.display !== "none") {
+    targetDiv.style.display = "none";
+  } else {
+    targetDiv.style.display = "block";
+  }
+};
+document.getElementById('toggle').focus();
+</script>
 	<script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/popper.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
