--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="Aboutus.html">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="services.html">Services</a></li>
           <li><a class="nav-link scrollto" href="login.html">Login</a></li>   
           <li><a class="nav-link scrollto" href="register.html">Register</a></li>
         </ul>
