--- a/contactus.html
+++ b/contactus.html
@@ -44,20 +44,10 @@
       </div>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto " href="index.html" >Home</a></li>
-          <li><a class="nav-link scrollto" href="aboutus.html" >About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Login Type</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Login</a></li>
-              
-              <li><a href="#">Register</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto active" href="#contact">Contact Us</a></li>
+       <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="Aboutus.html">About Us</a></li>
+          <li><a class="nav-link scrollto" href="services.html">Services</a></li>
+          <li><a class="nav-link scrollto" href="contactus.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
