--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="Aboutus.html">About Us</a></li>
           <li><a class="nav-link scrollto" href="services.html">Services</a></li>
-          <li><a class="nav-link scrollto" href="contactus.html">Login</a></li>
+          <li><a class="nav-link scrollto" href="contactus.html">Contact Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
