--- a/Aboutus.html
+++ b/Aboutus.html
@@ -46,11 +46,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="index.html" >Home</a></li>
-          <li><a class="nav-link scrollto active" href="#about" >About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto" href="login.html">Login</a></li>   
-          <li><a class="nav-link scrollto" href="register.html">Register</a></li>
-          
+          <li><a class="nav-link scrollto active" href="aboutus.html" >About Us</a></li>
+          <li><a class="nav-link scrollto" href="services.html">Services</a></li>
+          <li><a class="nav-link scrollto" href="contactus.html">Contact Us</a></li>   
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
