--- a/contactus.html
+++ b/contactus.html
@@ -44,10 +44,10 @@
       </div>
 
       <nav id="navbar" class="navbar">
-       <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="Aboutus.html">About Us</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto " href="Aboutus.html">About Us</a></li>
           <li><a class="nav-link scrollto" href="services.html">Services</a></li>
-          <li><a class="nav-link scrollto" href="contactus.html">Login</a></li>
+          <li><a class="nav-link scrollto active" href="contactus.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
