--- a/services.html
+++ b/services.html
@@ -47,8 +47,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="index.html" >Home</a></li>
-          <li><a class="nav-link scrollto active" href="about.html" >About Us</a></li>
-          <li><a class="nav-link scrollto" href="services.html">Services</a></li>
+          <li><a class="nav-link scrollto " href="about.html" >About Us</a></li>
+          <li><a class="nav-link scrollto active" href="services.html">Services</a></li>
           <li><a class="nav-link scrollto" href="contactus.html">Contact Us</a></li>  
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
