--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
 				</div>
 				<div class="form-group">        
 				  <div class="col-sm-offset-2 col-sm-10">
-					<button class="btn btn-default" value="Set Focus" OnClick="document.myform2.fname.focus();">Submit</button>
+					<button class="btn btn-primary" value="Set Focus" OnClick="document.myform2.fname.focus();">Submit</button>
 				  </div>
 				</div>
 			</div>
