--- a/contactus.html
+++ b/contactus.html
@@ -25,6 +25,13 @@
 
   <!-- Template Main CSS File -->
   <link href="./assets/css/style.css" rel="stylesheet">
+	<style>
+		@media only screen and (max-width: 768px) {
+		      aside{
+			display:none;
+			}
+		}
+	</style>
   
 </head>
 
