--- a/contactus.html
+++ b/contactus.html
@@ -91,7 +91,7 @@
 <b><h2 style="color:#89CFF0;font-size:40px">Contact Us</h2></b>
 <section width="23%" style="float: right;">
   <aside style="width: 60vh;height:60vh;padding-left: 15px;margin-left: 15px;float: right;font-style: italic;background-color: #f5f5f6;">
-    <h3>If You any Quries <br> Feel Free to Contact Us</h3><br><br>
+    <h3>If You Have any Quries <br> Feel Free to Contact Us</h3><br><br>
     <img src="https://img.icons8.com/ios-glyphs/30/000000/phone-disconnected.png"/>+ 91 6302536043<br><br>
     <img src="https://img.icons8.com/wired/34/000000/email.png"/>&nbsp;Fitnessflyers04@gmail.com<br><br>
     <img src="https://img.icons8.com/material-rounded/30/000000/next-location.png"/>Andhra Pradesh<br><br>
