--- a/UnderWeight.html
+++ b/UnderWeight.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fitness Flyers Bootstrap Template - contactus</title>
+  <title>Fitness Flyers - Under Weight</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
