--- a/index.html
+++ b/index.html
@@ -165,21 +165,21 @@
                 <li><a href="#">Under Weight</a>
                   <i class="fa fa-caret-down"></i>
                   <ul>
-                    <li><a href="./UnderWeight.html">Diets</a></li>
+                    <li><a href="./UnderWeight.html">Diet</a></li>
                     <li><a href="./U_Workouts.html">WorkOuts</a></li>
                   </ul>
                 </li>
                  <li><a href="#">Over Weight</a>
                   <i class="fa fa-caret-down"></i>
                   <ul>
-                    <li><a href="./Overweight.html">Diets</a></li>
+                    <li><a href="./Overweight.html">Diet</a></li>
                     <li><a href="./O_Workouts.html">WorkOuts</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Obesity</a>
                   <i class="fa fa-caret-down"></i>
                   <ul>
-                    <li><a href="./Obesity.html">Diets</a></li>
+                    <li><a href="./Obesity.html">Diet</a></li>
                     <li><a href="./Obes_Workouts.html">WorkOuts</a></li>
                   </ul>
                 </li>
