--- a/bmi.html
+++ b/bmi.html
@@ -33,7 +33,13 @@
 <script src="./2-bmi.js"></script>
 
 </head>
-
+<style>
+   @media screen and (max-width: 767px){
+           .container img{
+            width:100%;
+           }
+        }
+</style>
 <body>
 
   <!-- ======= Header ======= -->
