--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
   </aside>
 </section>	
 		<div class="col-md-9">
-		 <form id="contact_form" name="myform2" >
+		 <form id="contact_form" name="myform2" action="https://formspree.io/f/moqynjqd" method="post" >
 			<div class="contact-form">
 				<div id="message" class="alert alert-danger alert-dismissible fade"></div>
 				<div class="form-group">				  
