--- a/contactus.html
+++ b/contactus.html
@@ -131,7 +131,7 @@
 				</div>
 				<div class="form-group">        
 				  <div class="col-sm-offset-2 col-sm-10">
-					<center><button class="btn btn-default" value="Set Focus" onclick="myFunction()" style="background-color:#abe1fa; color:#000;margin-top: 10px;box-shadow: 3px 6px 10px 0.3px"><a href="mailto:Fitnessflyers04@gmail.com" >Submit</a></button></center>
+					<center><button class="btn btn-default" value="Set Focus" onclick="myFunction()" style="background-color:#abe1fa; color:#000;margin-top: 10px;box-shadow: 3px 6px 10px 0.3px">Submit</button></center>
 				  </div>
 				</div>
 			</div>
