--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg">&nbsp;&nbsp;&nbsp;<h1 style="color:#000" class="logo-title">Fitness Flyers<h1></a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h1 style="color:#000" class="logo-title">Fitness Flyers<h1></a></h1>
          </div>
       </div>
       <div class="header_right">
