--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="./assets/css/nav.css">
   <!--About us-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="all">
 
@@ -149,7 +149,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg">&nbsp;&nbsp;&nbsp;<a href="index.html" style="color:#000" class="logo-title">Fitness Flyers</a></a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg">&nbsp;&nbsp;&nbsp;<a href="index.html" style="color:#000;font-family: 'Arima Madurai', cursive;" class="logo-title" >Fitness Flyers</a></a></h1>
          </div>
       </div>
       <div class="header_right">
@@ -196,16 +196,16 @@
 <div class="hero-container">
      <div class="container">
 	 
-     <h1 style="color:white;font-size:50px">Welcome to Fitness Flyers</h1>
-     <b> <h2 style="color:white;font-size:30px;font-variant:bold;">Dream to be fit </h2></b>
+     <h1 style="color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">Welcome to Fitness Flyers</h1>
+     <b> <h2 style="color:white;font-size:30px;font-variant:bold;font-family: 'Arima Madurai', cursive;">Dream to be fit </h2></b>
 
-<a href="bmi.html">	<input type="button" value="BMI Calculation" style="color:black;background-color:#89CFF0;" class="btn-get-started scrollto" data-toggle="popover" title="Click Here to Calculate Your BMI"></a>
+<a href="bmi.html">	<input type="button" value="BMI Calculation" style="color:black;background-color:#89CFF0;font-family: 'Arima Madurai', cursive;" class="btn-get-started scrollto" data-toggle="popover" title="Click Here to Calculate Your BMI"></a>
 	 </div>
   </section>
   <div class="aboutus">
     <center>
-      <h1>Created to make your dream to come true.</h1>
-      <p style="font-size: 18px;">Fitness Flyers - Dream to be fit</p>
+      <h1 style="font-family: 'Arima Madurai', cursive;">Created to make your dream to come true.</h1>
+      <p style="font-size: 18px;font-family: 'Arima Madurai', cursive;">Fitness Flyers - Dream to be fit</p>
       <blockquote>
         <p style="font-size: 22px;">We believe fitness should be accessible to everyone, everywhere, regardless of income level or access to a gym. That's why we offer some full-length workout videos, the most affordable and effective workout programs on the web, and helpful healthy foods, nutrition and fitness information prvoided with BMI Calculation. User can follow the diet, workouts based on the category he falls upon and get awared through the articles provided in our website.</p></center>
       </blockquote>
