--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <!--Our Team-->
   <section class="team">
   <div class="swiper-container">
-    <center><h1 class="team-head">Our Team</h1></center>
+    <center><h1 class="team-head" style="font-family: 'Arima Madurai', cursive;">Our Team</h1></center>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="slide-container">
@@ -277,7 +277,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
+          <h2 style="font-family: 'Arima Madurai', cursive;">Frequently Asked Questions</h2>
         </div>
 
         <ul class="faq-list">
@@ -354,7 +354,7 @@ If you are overweight, losing even a small amount of weight can improve your qua
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" style="font-family: 'Arima Madurai', cursive;">
         &copy; Copyright &nbsp;&nbsp;&nbsp;<strong><span><img src="assets/img/portfolio/logo2.jpg" style="height:30px">&nbsp;&nbsp;&nbsp;&nbsp;Fitness Flyers</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
