--- a/contactus.html
+++ b/contactus.html
@@ -86,12 +86,12 @@
     </div>
   </header><!-- End #header -->
 <hr style="background-color:#89CFF0"><br>  
-  <main id="main">
+  <main id="main" style="background-color:#f5f5f6;font-family: 'Arima Madurai', cursive;">
 <div class="container contact" width="70%">	
-<b><h2 style="color:#89CFF0;font-size:40px">Contact Us</h2></b>
+<b><h2 style="color:#89CFF0;font-size:40px;">Contact Us</h2></b>
 <section width="23%" style="float: right;">
-  <aside style="width: 60vh;height:60vh;padding-left: 15px;margin-left: 15px;float: right;font-style: italic;background-color: #f5f5f6;">
-    <h3>If You Have any Quries <br> Feel Free to Contact Us</h3><br><br>
+  <aside style="width: 60vh;height:60vh;padding-left: 15px;margin-left: 15px;float: right;font-family: 'Arima Madurai', cursive;background-color: #f5f5f6;">
+    <h3>If You Have any Queries <br> Feel Free to Contact Us</h3><br><br>
     <img src="https://img.icons8.com/ios-glyphs/30/000000/phone-disconnected.png"/>+ 91 6302536043<br><br>
     <img src="https://img.icons8.com/wired/34/000000/email.png"/>&nbsp;Fitnessflyers04@gmail.com<br><br>
     <img src="https://img.icons8.com/material-rounded/30/000000/next-location.png"/>Andhra Pradesh<br><br>
@@ -141,6 +141,7 @@
 </b>		
 	</div>
     <br><br>
+	</main>
 	<script type="text/javascript">
   function myFunction() {
     var a = document.forms["myform2"]["fname"].value;
