--- a/Aboutus.html
+++ b/Aboutus.html
@@ -84,7 +84,7 @@
   <!-- ======= Hero Section ======= -->
   
 
-  <main id="main">
+  <main id="main" style="background-color:#f5f5f6">
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
