--- a/bmi.html
+++ b/bmi.html
@@ -48,7 +48,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black;font-family: 'Arima Madurai', cursive;">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
@@ -92,13 +92,13 @@
   </header>
   <!-- End #header -->
   <br>br><br><br>
-<div class="container">
+<div class="container" style="backgound-color:#f5f5f6">
 
   <div class="section-title">
-    <center><h2 style="background-color:#89CFF0;color:white;font-size:50px">BMI Calculation</h2></center>
+    <center><h2 style="background-color:#89CFF0;color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">BMI Calculation</h2></center>
   </div>
 <img src="./assets/img/bmi.png" align="right" style="margin-top: 35px;">
-<form name="bmiForm" style="margin-top: 40px;">
+<form name="bmiForm" style="margin-top: 40px;font-family: 'Arima Madurai', cursive;">
 <b style="font-size: 30px;">Your Weight(kg): <input type="text" name="weight" size="10"  ><br /></b><br>
 <b style="font-size: 30px;">Your Height(cm): <input type="text" name="height" size="10"><br /></b>
 <input type="button" value="Calculate BMI" onClick="calculateBmi();hidebutton()" style="font-size: 30px;display:inline;background-color:#89CFF0;color:white;margin-top:15px;margin-left:35px;border:1px solid #000;">
