--- a/contactus.html
+++ b/contactus.html
@@ -87,8 +87,8 @@
   </header><!-- End #header -->
 <hr style="background-color:#89CFF0"><br>  
   <main id="main" style="background-color:#f5f5f6;font-family: 'Arima Madurai', cursive;">
-<div class="container contact" width="70%">	
-<b><h2 style="color:#89CFF0;font-size:40px;">Contact Us</h2></b>
+<div class="container contact" width="70%">
+	 <b><center><h2 style="background-color:#89CFF0;color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">Contact Us</h2></center></b>
 <section width="23%" style="float: right;">
   <aside style="width: 60vh;height:60vh;padding-left: 15px;margin-left: 15px;float: right;font-family: 'Arima Madurai', cursive;background-color: #f5f5f6;">
     <h3>If You Have any Queries <br> Feel Free to Contact Us</h3><br><br>
