--- a/bmi.html
+++ b/bmi.html
@@ -91,8 +91,9 @@
     </div>
   </header>
   <!-- End #header -->
+        <section style="backgound-color:#f5f5f6">
   <br>br><br><br>
-<div class="container" style="backgound-color:#f5f5f6">
+<div class="container">
 
   <div class="section-title">
     <center><h2 style="background-color:#89CFF0;color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">BMI Calculation</h2></center>
@@ -106,11 +107,11 @@
 <b style="font-size: 30px;">Your BMI:</b> <input type="text" name="bmi" size="10" style="width:190px;font-size: 30px;" readonly><br><br>
 <b style="font-size: 30px;">Category:</b> <input type="text" name="meaning" size="25" id="category" style=" width:190px;font-size: 30px;" readonly>
 </form><br>
-<a href="./Bmi_UW.html" target="_blank"><button  id="myButton" class="float-left submit-button" style="font-size: 30px;background-color:#89CFF0;color:white;border:1px solid #000;">UnderWeight</button></a>
-<a href="./Bmi_OW.html" target="_blank"><button id="myButton" class="float-left submit-button" style="font-size: 30px;background-color:#89CFF0;color:white;border:1px solid #000;">Overweight</button></a>
-<a href="./Bmi_Obesity.html" target="_blank"><button id="myButton" class="float-left submit-button" style="font-size: 30px;background-color:#89CFF0;color:white;border:1px solid #000;">Obesity</button></a>
+<a href="./Bmi_UW.html" target="_blank"><button  id="myButton" class="float-left submit-button" style="font-size: 30px;background-color:#89CFF0;color:white;border:1px solid #000;font-family: 'Arima Madurai', cursive;">UnderWeight</button></a>
+<a href="./Bmi_OW.html" target="_blank"><button id="myButton" class="float-left submit-button" style="font-size: 30px;background-color:#89CFF0;color:white;border:1px solid #000;font-family: 'Arima Madurai', cursive;">Overweight</button></a>
+<a href="./Bmi_Obesity.html" target="_blank"><button id="myButton" class="float-left submit-button" style="font-size: 30px;background-color:#89CFF0;color:white;border:1px solid #000;font-family: 'Arima Madurai', cursive;">Obesity</button></a>
 </div>
-
+</section>
 <!------------------------------------------------------ Redirect script starts here ----------------------------------------------------->
 
 <script type="text/javascript">
