--- a/contactus.html
+++ b/contactus.html
@@ -110,14 +110,14 @@
 				</div>
         <br>
 				<div class="form-group">
-				  <label class="control-label col-sm-2" for="phone"><b style="color:red;size:5px">* </b><b>Phone Number&nbsp;:</b></label>
+				  <label class="control-label col-sm-2" for="phone"><b style="color:red;size:5px"></b><b>Phone Number&nbsp;:</b></label>
 				  <div class="col-sm-10">          
 					<input type="text" class="form-control" id="phone" name="phone" placeholder="Enter Your Contact Number" title="Please enter 10 digit valid phone number starts with 6/7/8/9 " name="lname" required>
 				  </div>
           <br>
 				</div>
 				<div class="form-group">
-				  <label class="control-label col-sm-2" for="email"><b style="color:red;size:5px">*</b><b>Email</b>&nbsp;&nbsp;&nbsp;&nbsp;:</label>
+				  <label class="control-label col-sm-2" for="email"><b style="color:red;size:5px">*</b><b>Email</b>&nbsp;&nbsp;:</label>
 				  <div class="col-sm-10">
 					<input type="email" class="form-control" id="email" name="email" placeholder="Enter Email Id" name="email" onselect="myFunction2()" required>
 				  </div>
