--- a/bmi.html
+++ b/bmi.html
@@ -91,10 +91,9 @@
     </div>
   </header>
   <!-- End #header -->
-        <section style="backgound-color:#f5f5f6">
+<section style="background-color:#f5f5f6;">
   <br>br><br><br>
 <div class="container">
-
   <div class="section-title">
     <center><h2 style="background-color:#89CFF0;color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">BMI Calculation</h2></center>
   </div>
@@ -133,8 +132,6 @@
   <!-------------------------------------------------  Redirect script ends here------------------------------------------------------------------------------------>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
-
-<br><br><br><br><br><br><br><br><br><br>
 <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
