--- a/bmi.html
+++ b/bmi.html
@@ -35,7 +35,7 @@
 </head>
 <style>
    @media screen and (max-width: 767px){
-           .container img{
+           .container .logo-img{
             width:100%;
            }
         }
@@ -48,7 +48,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black;font-family: 'Arima Madurai', cursive;">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img class="logo-img" src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black;font-family: 'Arima Madurai', cursive;">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
