--- a/contactus.html
+++ b/contactus.html
@@ -86,7 +86,7 @@
     </div>
   </header><!-- End #header -->
 <hr style="background-color:#89CFF0"><br>  
-  <main id="main" style="background-color:#f5f5f6;font-family: 'Arima Madurai', cursive;">
+  <main id="main" style="background-color:#f5f5f6;font-family: 'Arima Madurai', cursive;margin-top:40px">
 <div class="container contact" width="70%">
 	 <b><center><h2 style="background-color:#89CFF0;color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">Contact Us</h2></center></b>
 <section width="23%" style="float: right;">
