--- a/index.html
+++ b/index.html
@@ -305,32 +305,30 @@ and morbidity due to specific medical conditions, and this is the use for which 
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">What is the difference between being overweight and being obese? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">What's the Best Diet for Fitness Goals?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
             <h3>  <p>
-               Determining whether someone is overweight or obese is often determined by assessing a person's body mass index (BMI), which is a ratio between weight and height. If your BMI falls between 25 and 29.9, you are overweight. If your BMI is 30 or higher, you are considered obese.
-		  </p></h3>
+               diet plays a huge role in the overall success of  new routine. Regardless of ygoals, it’s important to give your body the fuel and energy it needs to crush and recover from your workouts. There are tons of diets out there, and really when it comes down to it, the choice is personal. If I can give a general piece of advice, it would be to simply focus on including more whole foods in your diet.
+		    </p></h3>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Is a healthy weight the same for everyone? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">What is the main cause of obesity?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <h3><p>
-               No. Different people can have different measurements of a healthy weight depending on whether they are male or female, short or tall. People’s healthy weight can also vary with their age, amount of lean muscle and ethnic background. 
-		 </p></h3>
+               Though genetics and cultural and environmental factors can lead to obesity, the main cause is eating too much and/or not getting enough exercise.
+		      </p></h3>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Why should I try to be a healthy weight?
+            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">What are healthy ways to manage weight?
  <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
              <h3> <p>
-        Being a healthy weight benefits your health and wellbeing in many ways. People who are a healthy weight generally live longer and have a lower risk of developing chronic diseases.
-
-If you are overweight, losing even a small amount of weight can improve your quality of life. Being a healthy weight can make you more mobile and energetic, improve your self-esteem and reduce your risk of depression. Children who are a healthy weight may be less likely to be bullied, to have poor self-esteem and to develop eating disorders.        
-	    </p></h3>
+        When it comes to weight loss and weight management, lifestyle changes like healthy eating and increased physical activity are important for everyone. But when lifestyle changes are not enough, there are multiple options, including prescription medicines that could help you reach your long-term goals.
+		     </p></h3>
             </div>
           </li>
 
