--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <a href="bmi.html">	<input type="button" value="BMI Calculation" style="color:black;background-color:#89CFF0;font-family: 'Arima Madurai', cursive;" class="btn-get-started scrollto" data-toggle="popover" title="Click Here to Calculate Your BMI"></a>
 	 </div>
   </section>
-  <div class="aboutus">
+  <div class="aboutus" style="background-color:#f5f5f6">
     <center>
       <h1 style="font-family: 'Arima Madurai', cursive;">Created to make your dream to come true.</h1>
       <p style="font-size: 18px;font-family: 'Arima Madurai', cursive;">Fitness Flyers - Dream to be fit</p>
