--- a/index.html
+++ b/index.html
@@ -284,41 +284,40 @@
           <li>
             <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">What is BMI? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
-             <h3> <p>
+             <p>
                 BMI is an acronym for Body Mass Index, and it is an indicator of the amount of fat which is stored in the human body.
  It provides a measure of the appropriateness of your weight to your height, based on health issues which are known to arise as a result of having a BMI which is too low or too high.
-              </p></h3>
+              </p>
             </div>
           </li>
 
           <li>
             <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">How accurate is BMI? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-              <h3><p>
+              <p>
 In itself, BMI is entirely accurate, but the question probably relates to how accurate BMI is in classifying people as having either a healthy weight 
 or an unhealthy weight. When used for populations, BMI has been found to be very accurate in predicting the incidence of mortality 
 
 and morbidity due to specific medical conditions, and this is the use for which it was originally designed. It is less accurate in relation to individuals for the reason
  that it does not directly measure body fat. While for many people BMI is a reliable indicator of healthy or unhealthy levels of body fat, for some it can give incorrect indications. These can include, for example, people who are either very tall or very short, or people who are heavily muscled.               
-		</p></h3>
+		</p>
             </div>
           </li>
-
           <li>
             <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">What's the Best Diet for Fitness Goals?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-            <h3>  <p>
-               diet plays a huge role in the overall success of  new routine. Regardless of ygoals, it’s important to give your body the fuel and energy it needs to crush and recover from your workouts. There are tons of diets out there, and really when it comes down to it, the choice is personal. If I can give a general piece of advice, it would be to simply focus on including more whole foods in your diet.
-		    </p></h3>
+            <p>
+               Diet plays a huge role in the overall success of  new routine. Regardless of your goals, it’s important to give your body the fuel and energy it needs to crush and recover from your workouts. There are tons of diets out there, and really when it comes down to it, the choice is personal. If I can give a general piece of advice, it would be to simply focus on including more whole foods in your diet.
+		    </p>
             </div>
           </li>
 
           <li>
             <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">What is the main cause of obesity?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-              <h3><p>
+              <p>
                Though genetics and cultural and environmental factors can lead to obesity, the main cause is eating too much and/or not getting enough exercise.
-		      </p></h3>
+		      </p>
             </div>
           </li>
 
@@ -326,18 +325,18 @@ and morbidity due to specific medical conditions, and this is the use for which 
             <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">What are healthy ways to manage weight?
  <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-             <h3> <p>
+              <p>
         When it comes to weight loss and weight management, lifestyle changes like healthy eating and increased physical activity are important for everyone. But when lifestyle changes are not enough, there are multiple options, including prescription medicines that could help you reach your long-term goals.
-		     </p></h3>
+		     </p>
             </div>
           </li>
 
           <li>
             <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">How do I know which diet and physical activity products work? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-             <h3> <p>
+             <p>
                Lots of diet and exercise products and programs make big promises about long-lasting weight loss and/or fitness. But before you rush out to try the latest one, ask yourself some questions about the promises being made. And remember: if it seems too good to be true, it probably is.
-		  </p></h3>
+		  </p>
             </div>
           </li>
         </ul>  
